--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "spells out numbers and acronyms in a string",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
-  "type": "module",
   "author": "Ruyi Ren",
   "license": "MIT",
   "dependencies": {
     "to-words": "^3.5.1"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
